# human-detection-dvr

./: .gitignore  CMakeLists.txt  README.md
config/: camera_config.json  detection_config.json
cpp/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  HumanDetectionDVR.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
cpp/include/: video_capture.h  zmq_sender.h
cpp/src/: main.cpp  video_capture.cpp  zmq_sender.cpp
cpp/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
cpp/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
cpp/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
cpp/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
python/: requirements.txt
python/detection/: human_detector.py  telegram_alert.py  zmq_receiver.py
scripts/: run_system.py
